fix answer alignment issues in teacher task review

--- a/resources/styles/components/task-teacher-review/question.less
+++ b/resources/styles/components/task-teacher-review/question.less
@@ -1,3 +1,30 @@
+@answer-label-color: @tutor-neutral-dark;
+
+.answer() {
+  .flex-display();
+  .align-items(center);
+  margin: @answer-vertical-spacing 0;
+}
+
+.answer-label() {
+  display: inline-block;
+  margin-left: -@tutor-card-body-padding-horizontal;
+  width: @tutor-card-body-padding-horizontal;
+  text-align: right;
+  padding-right: 8px;
+}
+
+.answer-text-label() {
+  #fonts > .script(1.4rem);
+  color: @answer-label-color;
+}
+
+.answer-icon-label() {
+  .fa-icon();
+  font-size: 3.5em;
+  font-weight: normal;
+  color: inherit;
+}
 .question {
 
   #fonts > .sans(1.8rem, 2.4rem);
@@ -6,19 +33,17 @@
   .answers-answer {
 
     &::before {
-      // .answer-label();
-      // .answer-icon-label();
+      .answer-label();
+      .answer-icon-label();
       text-align: center;
       width: 80px;
       font-size: 2rem;
       line-height: 2.4rem;
-      margin-top: 10px;
     }
 
     .selected-count {
       display: inline-block;
       width: 60px;
-      margin-top: 9px;
 
       &::before {
         content: attr(data-count);
@@ -38,22 +63,22 @@
       }
     }
 
-    // &.answer-correct::before {
-    //   content: @fa-var-check;
-    //   color: @correct-answer-color;
-    // }
+    &.answer-correct::before {
+      content: @fa-var-check;
+      color: @correct-answer-color;
+    }
 
-    // &:not(.answer-correct)::before {
-    //   content: @fa-var-close;
-    //   color: @wrong-answer-color;
-    // }
+    &:not(.answer-correct)::before {
+      content: @fa-var-close;
+      color: @wrong-answer-color;
+    }
   }
 
   .answers-table {
     // .answer-label-disable();
 
     .answers-answer {
-      .align-items(flex-start);
+      .answer();
     }
   }
 
